2003-09-26  Paul Eggert  <eggert@twinsun.com>

	* error.c (SIZE_MAX) [!defined SIZE_MAX]: Define.
	(error_tail): Do not loop, reallocating temporary buffer, since
	the original size is big enough.  This avoids one potential size
	overflow calculation.  Check for size overflow when calculating
	temporary buffer size.  Free temporary buffer when done, if
	it was allocated with malloc; this closes a memory leak.

	Merge error changes from glibc.

	* error.c, error.h: Update copyright notice header to match glibc.
	* error.c [defined _LIBC]: Include <errno.h>, <bits/libc-lock.h>.
	(error, error_at_line) [defined _LIBC && defined __libc_ptf_call]:
	Disable cancellation while printing error.
	* error.h: Prepend __ to parameter names.

2003-09-25  Karl Berry  <karl@gnu.org>

	* argp-fmtstream.c, argp-help.c: update from libc.

2003-09-25  Bruno Haible  <bruno@clisp.org>

	* version-etc-2.h: New file, from version-etc.h with modifications.
	* version-etc-2.c: New file, from version-etc.c with modifications.

2003-09-25  Simon Josefsson  <jas@extundo.com>

	* xgetdomainname.h: New file.
	* xgetdomainname.c: New file.

2003-09-25  Simon Josefsson  <jas@extundo.com>
            Bruno Haible  <bruno@clisp.org>

	* getdomainname.h: New file.
	* getdomainname.c: New file.

2003-09-24  Paul Eggert  <eggert@twinsun.com>

	* linebuffer.c (freebuffer): Don't free the argument, just
	the buffer associated with the argument.  Bug reported by
	Simon Josefsson.

2003-09-19  Karl Berry  <karl@gnu.org>

	* argp.h: update from libc.

2003-09-16  Paul Eggert  <eggert@twinsun.com>

	* linebuffer.c (readlinebuffer): Return NULL immediately upon
	input error, instead of returning NULL the next time we are called
	(and therefore losing track of errno).

2003-09-15  Paul Eggert  <eggert@twinsun.com>

	* getndelim2.c (getndelim2): Don't trash errno when a read
	fails, so that the caller gets the proper errno.

	* readutmp.c (read_utmp): Likewise.